tests/neg-custom-args/fatal-warnings/i17335.scala
// scalac: -Wunused:all

def aMethod() =
  doStuff { (x) => x } // error
